[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "dmr.py"
version = "0.0.7"
authors = [
  { name="Jasper", email="jasper@jazper.dk" },
]
description = "Pull data directly from the danish vehicle register with dmr.py"
readme = "README.md"
license = { file="LICENSE" }
requires-python = ">=3.7"
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Intended Audience :: Developers",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Internet",
    "Topic :: Software Development :: Libraries",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Utilities",
]

dependencies = [
    "lxml >= 4.9.2",
    "requests >= 2.28.2",
    "aiohttp >= 3.8.3",
    "pydantic >= 1.10.6",
]

[project.optional-dependencies]
test = [
    "pytest>=7.2.2",
]
speed = [
    "aiodns >= 3.0.0",
    "Brotli",
    "cchardet",
]

[tool.poetry.dependencies]
python = "^3.7"

[project.urls]
"Homepage" = "https://github.com/j4asper/dmr.py"
"Bug Tracker" = "https://github.com/j4asper/dmr.py/issues"
"Wiki" = "https://github.com/j4asper/dmr.py/wiki"
