[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "dmr.py"
version = "1.0.1"
authors = [
  { name="Jasper", email="jasper@jazper.dk" },
]
description = "Pull data directly from the danish vehicle register with dmr.py"
readme = "README.md"
license = { file="LICENSE" }
requires-python = ">=3.7"
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Intended Audience :: Developers",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Internet",
    "Topic :: Software Development :: Libraries",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Utilities",
]

dependencies = [
    "lxml == 4.9.3",
    "requests == 2.31.0",
    "aiohttp == 3.8.5",
    "pydantic == 2.3.0"
]

[project.optional-dependencies]
test = [
    "pytest == 7.4.1",
]
speed = [
    "aiodns >= 3.0.0",
    "Brotli",
    "cchardet",
]

[tool.poetry.dependencies]
python = "^3.7"

[project.urls]
"Homepage" = "https://github.com/j4asper/dmr.py"
"Bug Tracker" = "https://github.com/j4asper/dmr.py/issues"
